feat: Update Mermaid diagrams and enhance documentation clarity
- Changed the theme of Mermaid diagrams to improve visual consistency.
- Increased the maximum zoom level in the MermaidDownload component for better usability.
- Revised color schemes in various diagrams to enhance readability and accessibility.
- Updated documentation to reflect architectural changes and provide clearer insights into the system's components and interactions.

--- a/src/content/docs/annexes/difficultes.mdx
+++ b/src/content/docs/annexes/difficultes.mdx
@@ -72,10 +72,10 @@ flowchart LR
     
     Avant -.->|"🚀 3x plus rapide"| Apres
     
-    style Avant fill:#ffcdd2,stroke:#c62828
-    style Apres fill:#c8e6c9,stroke:#2e7d32
-    style A4 fill:#ef5350,stroke:#c62828
-    style B4 fill:#66bb6a,stroke:#2e7d32
+    style Avant fill:#c62828,stroke:#ef5350
+    style Apres fill:#2e7d32,stroke:#66bb6a
+    style A4 fill:#b71c1c,stroke:#ef5350
+    style B4 fill:#1b5e20,stroke:#66bb6a
 ```
 </MermaidDownload>
 
@@ -255,11 +255,11 @@ flowchart LR
     C --> D["🚀 Production"]
     B -.-> E["😱 Bugs en prod"]
     
-    style A fill:#e3f2fd,stroke:#1976d2
-    style B fill:#fff3e0,stroke:#f57c00
-    style C fill:#fff9c4,stroke:#f9a825
-    style D fill:#ffcdd2,stroke:#c62828
-    style E fill:#ef5350,stroke:#c62828,color:#fff
+    style A fill:#1565c0,stroke:#1976d2
+    style B fill:#e65100,stroke:#f57c00
+    style C fill:#f9a825,stroke:#fbc02d
+    style D fill:#c62828,stroke:#ef5350
+    style E fill:#b71c1c,stroke:#c62828
 ```
 </MermaidDownload>
 
@@ -277,15 +277,15 @@ flowchart LR
     G --> H["🚀 Production"]
     H -.-> I["😊 Stabilité"]
     
-    style A fill:#e3f2fd,stroke:#1976d2
-    style B fill:#e8f5e9,stroke:#388e3c
-    style C fill:#fff3e0,stroke:#f57c00
-    style D fill:#fff3e0,stroke:#f57c00
-    style E fill:#f3e5f5,stroke:#7b1fa2
-    style F fill:#fff3e0,stroke:#f57c00
-    style G fill:#e0f7fa,stroke:#0097a7
-    style H fill:#c8e6c9,stroke:#2e7d32
-    style I fill:#66bb6a,stroke:#2e7d32,color:#fff
+    style A fill:#1565c0,stroke:#1976d2
+    style B fill:#2e7d32,stroke:#388e3c
+    style C fill:#e65100,stroke:#f57c00
+    style D fill:#e65100,stroke:#f57c00
+    style E fill:#7b1fa2,stroke:#9c27b0
+    style F fill:#e65100,stroke:#f57c00
+    style G fill:#00838f,stroke:#0097a7
+    style H fill:#388e3c,stroke:#4caf50
+    style I fill:#1b5e20,stroke:#2e7d32
 ```
 </MermaidDownload>
 
