--- a/src/content/docs/annexes/seo.mdx
+++ b/src/content/docs/annexes/seo.mdx
@@ -131,9 +131,9 @@ flowchart TD
     LegalIndex --> Privacy
     LegalIndex --> Terms
     
-    style Site fill:#f5f5f5,stroke:#333
-    style Blog fill:#e3f2fd,stroke:#1976d2
-    style Legal fill:#fff3e0,stroke:#f57c00
+    style Site fill:#424242,stroke:#616161
+    style Blog fill:#1565c0,stroke:#1976d2
+    style Legal fill:#e65100,stroke:#f57c00
 ```
 </MermaidDownload>
 
