--- a/src/content/docs/architecture/graphes-langgraph.mdx
+++ b/src/content/docs/architecture/graphes-langgraph.mdx
@@ -200,9 +200,9 @@ graph TD;
     website_error_handler --> __end__;
     youtube_error_handler --> __end__;
     
-    classDef default fill:#f2f0ff,line-height:1.2
+    classDef default fill:#5e35b1,line-height:1.2
     classDef first fill-opacity:0
-    classDef last fill:#bfb6fc
+    classDef last fill:#7c4dff
 ```
 </MermaidDownload>
 
@@ -338,9 +338,9 @@ graph TD;
     validate_batch -. continue .-> process_batch;
     process_batch --> __end__;
     
-    classDef default fill:#f2f0ff,line-height:1.2
+    classDef default fill:#5e35b1,line-height:1.2
     classDef first fill-opacity:0
-    classDef last fill:#bfb6fc
+    classDef last fill:#7c4dff
 ```
 </MermaidDownload>
 
