--- a/src/content/docs/architecture/pipelines-traitement.mdx
+++ b/src/content/docs/architecture/pipelines-traitement.mdx
@@ -101,9 +101,9 @@ graph LR
     F --> G
     G --> H[END]
     
-    style A fill:#e1f5fe
-    style G fill:#c8e6c9
-    style H fill:#bfb6fc
+    style A fill:#0277bd
+    style G fill:#388e3c
+    style H fill:#7c4dff
 ```
 </MermaidDownload>
 
@@ -182,9 +182,9 @@ graph TB
     
     K --> L[detect_complex_content]
     
-    style A fill:#e1f5fe
-    style E fill:#fff9c4
-    style K fill:#c8e6c9
+    style A fill:#0277bd
+    style E fill:#f9a825
+    style K fill:#388e3c
 ```
 </MermaidDownload>
 
@@ -264,9 +264,9 @@ graph LR
     D -->|error| E
     D -->|continue| F[detect_complex_content]
     
-    style A fill:#e1f5fe
-    style D fill:#fff9c4
-    style E fill:#ffcdd2
+    style A fill:#0277bd
+    style D fill:#f9a825
+    style E fill:#c62828
 ```
 </MermaidDownload>
 
@@ -309,9 +309,9 @@ graph LR
     D -->|error| E
     D -->|continue| F[detect_complex_content]
     
-    style A fill:#e1f5fe
-    style D fill:#fff9c4
-    style E fill:#ffcdd2
+    style A fill:#0277bd
+    style D fill:#f9a825
+    style E fill:#c62828
 ```
 </MermaidDownload>
 
@@ -359,10 +359,10 @@ graph TB
     C -->|error| H
     D -->|error| H
     
-    style A fill:#e1f5fe
-    style C fill:#c8e6c9
-    style D fill:#fff9c4
-    style H fill:#ffcdd2
+    style A fill:#0277bd
+    style C fill:#388e3c
+    style D fill:#f9a825
+    style H fill:#c62828
 ```
 </MermaidDownload>
 
@@ -406,9 +406,9 @@ graph LR
     C -->|error| E
     C -->|continue| D[detect_complex_content]
     
-    style A fill:#e1f5fe
-    style C fill:#c8e6c9
-    style E fill:#ffcdd2
+    style A fill:#0277bd
+    style C fill:#388e3c
+    style E fill:#c62828
 ```
 </MermaidDownload>
 
