--- a/src/content/docs/projet/cahier-des-charges.mdx
+++ b/src/content/docs/projet/cahier-des-charges.mdx
@@ -141,10 +141,10 @@ flowchart TB
     AI -.->|"génère"| UC4
     AI -.->|"génère"| UC5
 
-    style Acteurs fill:#e3f2fd
-    style Import fill:#fff3e0
-    style Learn fill:#e8f5e9
-    style Manage fill:#fce4ec
+    style Acteurs fill:#1565c0
+    style Import fill:#e65100
+    style Learn fill:#2e7d32
+    style Manage fill:#ad1457
 ```
 </MermaidDownload>
 
@@ -183,9 +183,9 @@ flowchart LR
     P3 --> P4
     P4 --> Output
 
-    style Input fill:#ffecb3
-    style Process fill:#c8e6c9
-    style Output fill:#bbdefb
+    style Input fill:#ff8f00
+    style Process fill:#388e3c
+    style Output fill:#1976d2
 ```
 </MermaidDownload>
 
@@ -443,10 +443,10 @@ flowchart TB
     K8S --> API
     K8S --> IA
 
-    style Frontend fill:#e3f2fd
-    style Backend fill:#fff3e0
-    style Data fill:#e8f5e9
-    style Infra fill:#fce4ec
+    style Frontend fill:#1565c0
+    style Backend fill:#e65100
+    style Data fill:#2e7d32
+    style Infra fill:#ad1457
 ```
 </MermaidDownload>
 
