--- a/src/content/docs/projet/tests.mdx
+++ b/src/content/docs/projet/tests.mdx
@@ -33,9 +33,9 @@ flowchart TB
     
     E2E --> Integration --> Unit
     
-    style E2E fill:#ffcdd2,stroke:#c62828
-    style Integration fill:#fff9c4,stroke:#f9a825
-    style Unit fill:#c8e6c9,stroke:#2e7d32
+    style E2E fill:#c62828,stroke:#ef5350
+    style Integration fill:#f9a825,stroke:#fbc02d
+    style Unit fill:#2e7d32,stroke:#4caf50
     style Pyramid fill:transparent,stroke:transparent
 ```
 </MermaidDownload>
