--- a/src/content/docs/architecture/service-ia.mdx
+++ b/src/content/docs/architecture/service-ia.mdx
@@ -130,13 +130,13 @@ flowchart LR
     F["📚 Plusieurs ressources"] --> G["📦 Batch Embedding Graph"]
     G --> B
     
-    style A fill:#e3f2fd,stroke:#1976d2
-    style B fill:#fff3e0,stroke:#f57c00
-    style C fill:#f3e5f5,stroke:#7b1fa2
-    style D fill:#e8f5e9,stroke:#388e3c
-    style E fill:#c8e6c9,stroke:#2e7d32
-    style F fill:#e3f2fd,stroke:#1976d2
-    style G fill:#fff3e0,stroke:#f57c00
+    style A fill:#1565c0,stroke:#1976d2
+    style B fill:#e65100,stroke:#f57c00
+    style C fill:#7b1fa2,stroke:#9c27b0
+    style D fill:#2e7d32,stroke:#388e3c
+    style E fill:#388e3c,stroke:#4caf50
+    style F fill:#1565c0,stroke:#1976d2
+    style G fill:#e65100,stroke:#f57c00
 ```
 </MermaidDownload>
 
@@ -234,9 +234,9 @@ graph TD;
     chunk_enrichment --> embedding_generation;
     embedding_generation --> __end__;
     
-    classDef default fill:#f2f0ff,line-height:1.2
+    classDef default fill:#5e35b1,line-height:1.2
     classDef first fill-opacity:0
-    classDef last fill:#bfb6fc
+    classDef last fill:#7c4dff
 ```
 </MermaidDownload>
 
