--- a/src/content/docs/projet/equipe.mdx
+++ b/src/content/docs/projet/equipe.mdx
@@ -95,10 +95,10 @@ flowchart LR
     
     Backlog --> Todo --> InProgress --> Done
     
-    style Backlog fill:#f5f5f5,stroke:#9e9e9e
-    style Todo fill:#fff3e0,stroke:#f57c00
-    style InProgress fill:#e3f2fd,stroke:#1976d2
-    style Done fill:#e8f5e9,stroke:#388e3c
+    style Backlog fill:#424242,stroke:#757575
+    style Todo fill:#e65100,stroke:#f57c00
+    style InProgress fill:#1565c0,stroke:#1976d2
+    style Done fill:#2e7d32,stroke:#388e3c
 ```
 </MermaidDownload>
 
