--- a/src/content/docs/projet/securite.mdx
+++ b/src/content/docs/projet/securite.mdx
@@ -43,8 +43,8 @@ flowchart LR
     
     MA <-->|"🔐 TLS 1.3\nCertificat Let's Encrypt"| API
     
-    style Mobile fill:#e3f2fd,stroke:#1976d2
-    style Backend fill:#e8f5e9,stroke:#388e3c
+    style Mobile fill:#1565c0,stroke:#1976d2
+    style Backend fill:#2e7d32,stroke:#388e3c
 ```
 </MermaidDownload>
 
